# SvgEditor

./: .gitignore  CMakeLists.txt  readme.md
cmake/: Translation.cmake
src/Commands/: AddShapeCommand.cpp  AddShapeCommand.h  CMakeLists.txt  Command.cpp  Command.h  CommandManager.cpp  CommandManager.h  CommandUtils.h  ModifyTextCommand.cpp  ModifyTextCommand.h  RemoveShapeCommand.cpp  RemoveShapeCommand.h  SvgEditorForwards.h
src/ConfigDialog/: CMakeLists.txt  configdialog.cpp  configdialog.h
src/ConfigManager/: ButtonTipManager.cpp  ButtonTipManager.h  CMakeLists.txt  configmanager.cpp  configmanager.h
src/CoreSvgEngine/: CMakeLists.txt  CoreSvgEngine.cpp  CoreSvgEngine.h  CoreSvgStructs.h  SvgDocument.cpp  SvgDocument.h  SvgElement.cpp  SvgElement.h  SvgShapes.cpp  SvgShapes.h  SvgText.cpp  SvgText.h
src/FileIOManager/: CMakeLists.txt  FileIOManager.cpp  FileIOManager.h
src/LoggingService/: CMakeLists.txt  LoggingService.cpp  LoggingService.h
src/QtUiLayer/: CMakeLists.txt  DrawingLayer.cpp  DrawingLayer.h  LeftSideBar.cpp  LeftSideBar.h  MainWindow.cpp  MainWindow.h  RightAttrBar.cpp  RightAttrBar.h  SvgDisplayWidget.cpp  SvgDisplayWidget.h  ToolId.h  main.cpp
src/Settings/: CMakeLists.txt  settingsdialog.cpp  settingsdialog.h  settingsdialog.ui  settingsmanager.cpp  settingsmanager.h
src/SvgEditor/: CMakeLists.txt  CanvasArea.cpp  CanvasArea.h  CustomTooltip.cpp  CustomTooltip.h  EditableTextItem.cpp  EditableTextItem.h  LeftSideBar.cpp  LeftSideBar.h  MainWindow.cpp  MainWindow.h  MainWindow_UndoRedo.cpp  RightAttrBar.cpp  RightAttrBar.h  ShapeToolBar.cpp  ShapeToolBar.h  XMLParser.cpp  XMLParser.h  edtSource.qrc  main.cpp  translations.qrc
src/SvgEditor/Commands/: AddShapeCommand.cpp  AddShapeCommand.h  Command.h  CommandManager.cpp  CommandManager.h  CommandUtils.h  RemoveShapeCommand.cpp  RemoveShapeCommand.h
src/SvgEditor/translations/: svgeditor_en.qm  svgeditor_en.ts  svgeditor_zh_CN.qm  svgeditor_zh_CN.ts
src/SvgEditor_App/: CMakeLists.txt  main.cpp
src/SvgEditor_UI/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui
tests/: CMakeLists.txt
tests/CoreSvgEngine/: CMakeLists.txt  CoreSvgEngineTest.cpp  CoreSvgEngineTest.h  SvgDocumentTest.cpp  SvgDocumentTest.h  SvgElementTest.cpp  SvgParserTest.cpp  SvgParserTest.h  SvgSpecialShapesTest.cpp  SvgTextTest.cpp  main.cpp
tests/FileIOManager/: CMakeLists.txt  FileIOManagerTest.cpp
translations/: en_US.ts  zh_CN.ts
